# alife

./: CMakeLists.txt  CMakePresets.json  README.md
src/: CMakeLists.txt  constants_m.f90  main.f90  math_m.f90  random_m.f90
